# WaveGlitch_BressaniDev

./: .env  .gitignore  CMakeLists.txt  Info.plist  Info.plist.in  MyScript.iss  README.md  WAVPlayer.cpp  build_release_linux.sh  build_release_macos.sh  build_release_windows.bat  clean_linux.sh  clean_mswin.bat  clean_osx.sh  main.cpp
Source/: AudioFileProperties.cpp  AudioFileProperties.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h  Misc.cpp  Misc.h  MyObjCWrapper.h  MyObjCWrapper.mm  WAVPlayer.cpp  WAVPlayer.h
icon/: MyIcon.icns  app.rc  script_macos.sh
